--- a/templates/project/layout/navbar.html
+++ b/templates/project/layout/navbar.html
@@ -1,64 +1,104 @@
-<ul class="navbar-nav mr-auto">
-    {% if not user.is_authenticated %}
-        <li class="nav-item {% if request.resolver_match.url_name == 'login' %}active{% endif %}">
-            <a class="nav-link" href="{% url 'login' %}">Üye Girişi</a>
-        </li>
-    {% else %}
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Üye İşlemleri</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-                <a class="dropdown-item" href="{% url 'password_change' %}">Şifre Değiştir</a>
-                <a class="dropdown-item" href="{% url 'logout' %}">Çıkış</a>
-            </div>
-        </li>
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <a class="navbar-brand" href="{% url 'role-list' %}">STOCKS PROJECT</a>
 
-        {% if request.session.role_page == 'distributor' %}
+  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
 
-            {% if perms.project.manage_dealer or navbar.author %}
+    <ul class="navbar-nav mr-auto">
+        {% if not user.is_authenticated %}
+            <li class="nav-item ">
+                <a class="nav-link" href="{% url 'login' %}">Üye Girişi</a>
+            </li>
+        {% else %}
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Üye İşlemleri</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                    <a class="dropdown-item" href="{% url 'role-list' %}">Rol Seçimi</a>
+                    <a class="dropdown-item" href="{% url 'password_change' %}">Şifre Değiştir</a>
+                    <a class="dropdown-item" href="{% url 'logout' %}">Çıkış</a>
+                </div>
+            </li>
+
+            {% if navbar.author and request.session.role_page %}
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Bayiler</a>
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Personel Yönetimi</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="{% url 'project:distributor-list-dealer' %}">Bayi Listele</a>
-                        <a class="dropdown-item" href="{% url 'project:distributor-create-dealer' %}">Bayi Ekle</a>
-                        <a class="dropdown-item" href="{% url 'project:distributor-attach-dealer' %}">Bayi İlişkilendir</a>
+                        <a class="dropdown-item" href="{% url 'list-staff' %}">Personel Listele</a>
+                        <a class="dropdown-item" href="{% url 'create-staff' %}">Personel Ekle</a>
+                        <a class="dropdown-item" href="{% url 'attach-staff' %}">Personel İlişkilendir</a>
                     </div>
                 </li>
             {% endif %}
 
+            {% if request.session.role_page == 'distributor' %}
 
-            {% if perms.project.manage_product or navbar.author %}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ürünler</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="{% url 'project:distributor-list-dealer' %}">Ürün Listele</a>
-                        <a class="dropdown-item" href="{% url 'project:distributor-create-dealer' %}">Ürün Ekle</a>
-                    </div>
-                </li>
+                {% if perms.project.manage_dealer or navbar.author %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Bayi Yönetimi</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown01">
+                            <a class="dropdown-item" href="{% url 'project:distributor-list-dealer' %}">Bayi Listele</a>
+                            <a class="dropdown-item" href="{% url 'project:distributor-create-dealer' %}">Bayi Ekle</a>
+                            <a class="dropdown-item" href="{% url 'project:distributor-attach-dealer' %}">Bayi İlişkilendir</a>
+                        </div>
+                    </li>
+                {% endif %}
+
+                {% if perms.project.manage_product or navbar.author %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ürün Yönetimi</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown01">
+                            <a class="dropdown-item" href="{% url 'project:distributor-list-product' %}">Ürün Listele</a>
+                            <a class="dropdown-item" href="{% url 'project:distributor-create-product' %}">Ürün Ekle</a>
+                        </div>
+                    </li>
+                {% endif %}
+
+                {% if perms.project.manage_payment or navbar.author %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ödeme Yönetimi</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown01">
+                            <a class="dropdown-item" href="{% url 'project:distributor-list-payment' %}">Ödeme Listele</a>
+                            <a class="dropdown-item" href="{% url 'project:distributor-list-detail-payment' %}">Borç - Alacak Listele</a>
+                        </div>
+                    </li>
+                {% endif %}
+
+                {% if perms.project.manage_order or navbar.author %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'project:distributor-list-order' %}">Sipariş Yönetimi</a>
+                    </li>
+                {% endif %}
+
+            {% elif request.session.role_page == 'dealer' %}
+
+                {% if perms.project.manage_payment or navbar.author %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ödeme Yönetimi</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown01">
+                            <a class="dropdown-item" href="{% url 'project:list-payment' %}">Ödeme Listele</a>
+                            <a class="dropdown-item" href="{% url 'project:list-detail-payment' %}">Borç - Alacak Listele</a>
+                            <a class="dropdown-item" href="{% url 'project:create-payment' %}">Ödeme Ekle</a>
+                        </div>
+                    </li>
+                {% endif %}
+
+                {% if perms.project.manage_order or navbar.author %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sipariş Yönetimi</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown01">
+                            <a class="dropdown-item" href="{% url 'project:list-payment' %}">Sipariş Listele</a>
+                            <a class="dropdown-item" href="{% url 'project:list-shop' %}">Ürün Listele</a>
+                            <a class="dropdown-item" href="{% url 'project:detail-cart' %}">Sepeti Listele</a>
+                            <a class="dropdown-item" href="{% url 'project:clear-cart' %}">Sepeti Temizle</a>
+                        </div>
+                    </li>
+                {% endif %}
+
             {% endif %}
-
-            {% if perms.project.manage_payment or navbar.author %}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ödeme</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="{% url 'project:distributor-list-dealer' %}">Ürün Listele</a>
-                        <a class="dropdown-item" href="{% url 'project:distributor-create-dealer' %}">Ürün Ekle</a>
-                    </div>
-                </li>
-            {% endif %}
-
-            {% if perms.project.manage_order or navbar.author %}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ürünler</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="{% url 'project:distributor-list-dealer' %}">Ürün Listele</a>
-                        <a class="dropdown-item" href="{% url 'project:distributor-create-dealer' %}">Ürün Ekle</a>
-                    </div>
-                </li>
-            {% endif %}
-
-        {% elif request.session_role_page == 'dealer' %}
-
-
         {% endif %}
-    {% endif %}
-</ul>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="arama kelimesi..." aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Ara</button>
+    </form>
+  </div>
+</nav>
