--- a/templates/project/layout/base.html
+++ b/templates/project/layout/base.html
@@ -14,33 +14,7 @@
 <body>
 
 
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="{% url 'role-list' %}">STOCKS PROJECT</a>
-
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
-
-        {% if not user.is_authenticated %}
-          <li class="nav-item {% if request.resolver_match.url_name == 'login' %}active{% endif %}">
-            <a class="nav-link" href="{% url 'login' %}">Üye Girişi</a>
-          </li>
-        {% else %}
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Üye İşlemleri</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="{% url 'password_change' %}">Şifre Değiştir</a>
-              <a class="dropdown-item" href="{% url 'logout' %}">Çıkış</a>
-            </div>
-          </li>
-
-        {% endif %}
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="arama kelimesi..." aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Ara</button>
-    </form>
-  </div>
-</nav>
+{% include 'project/layout/navbar.html' %}
 
 <main role="main">
   {% block top %}
