--- a/templates/project/shop/list.html
+++ b/templates/project/shop/list.html
@@ -3,7 +3,7 @@
 {% block top %}
     <div class="jumbotron">
         <h4>
-            Shop
+            <a href="{% url 'project:list-shop' %}">Shop</a>
         </h4>
     </div>
 {% endblock %}
